# farcaster-frames-template

./: .gitignore  Cargo.toml  Makefile  README.md  vercel.json
api/: hello.rs
src/: lib.rs
