[package]
name = "farcaster-frames-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.106", features = ["raw_value"] }
serde_derive = "1.0.188"
vercel_runtime = "1.1.0"
chrono = { version = "0.4", features = ["serde"] }


[lib]
path = "src/lib.rs"

[[bin]]
name = "hello"
path = "api/hello.rs"
